<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/nameTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_name"></TextView>

            <TextView
                android:id="@+id/nameTextView"
                style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/birthdayTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/birthdayLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_birthday"></TextView>

            <TextView
                android:id="@+id/birthdayTextView"
                style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/genderTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/genderLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_gender"></TextView>

            <TextView
                android:id="@+id/genderTextView"
                style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/phoneTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phoneLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_phone"></TextView>

            <TextView
                android:id="@+id/phoneTextView"
                style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/emailTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/emailLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_email"></TextView>

            <TextView
                android:id="@+id/emailTextView"
                style="@style/ContactTextView"></TextView>
        </TableRow>
    </TableLayout>
</ScrollView>
